--- a/package.json
+++ b/package.json
@@ -4,28 +4,38 @@
   "description": "Progressive time management application, powered by cloud and AI",
   "main": "index.js",
   "scripts": {
-    "test": "echo << 'Set up testing'",
     "start": "node ./build/index.js",
     "dev": "nodemon ./src/index.ts",
-    "build": "tsc -p ."
+    "build": "tsc -p .",
+    "migrate": "npx knex migrate:latest --knexfile ./src/config/knexfile.ts ./db/migrations/",
+    "seed": "npx knex seed:run --knexfile ./src/config/knexfile.ts",
+    "test": "npm run build && npm run seed && npx jest .build/tests/"
   },
   "author": "ILLIA Negovora",
   "license": "SEE LICENSE IN LICENSE.md",
   "devDependencies": {
     "@types/express": "^4.17.12",
-    "@types/jsonwebtoken": "^8.5.2",
-    "@types/knex": "^0.16.1",
+    "@types/express-session": "^1.17.4",
+    "@types/jest": "^27.0.1",
     "@types/node": "^15.12.4",
     "@types/pg": "^8.6.0",
+    "jest": "^27.1.0",
     "nodemon": "^2.0.7",
-    "ts-node": "^10.0.0",
+    "ts-jest": "^27.0.5",
+    "ts-node": "^10.2.1",
     "typescript": "^4.3.4"
   },
   "dependencies": {
+    "@types/validatorjs": "^3.15.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "knex": "^0.95.6",
-    "pg": "^8.6.0"
+    "express-session": "^1.17.2",
+    "google-auth-library": "^7.5.0",
+    "inversify": "^5.1.1",
+    "keycloak-connect": "^15.0.2",
+    "knex": "^0.95.10",
+    "pg": "^8.7.1",
+    "reflect-metadata": "^0.1.13",
+    "validatorjs": "^3.22.1"
   }
 }
